Port v1.3.0 to MC 1.21.1 (NeoForge 21.1.77, SC 1.9.11)